gel-ingress-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $gelGatewayIngress
spec:
  defaultBackend:
    service:
      name: $helmReleaseName-enterprise-logs-gateway
      port:
        number: 3100
